--- a/ProcessPage/src/components/LoginBtn.css
+++ b/ProcessPage/src/components/LoginBtn.css
@@ -7,5 +7,9 @@
     height: 30px;
     width: 100px;
     padding: 5px 25px;
+    color: #0C8F8F;
+    background-color: #aae3e3;
+    border: 1px solid #0C8F8F;
+    border-radius: 5px;
   }
   
