--- a/ProcessPage/src/components/RegisterBtn.css
+++ b/ProcessPage/src/components/RegisterBtn.css
@@ -7,4 +7,8 @@
     height: 30px;
     width: 100px;
     padding: 5px 25px;
+    color: #ddecec;
+    background-color: #0C8F8F;
+    border: 1px solid #0C8F8F;
+    border-radius: 5px;
   }
