--- a/theraply/src/components/RegisterBtn.css
+++ b/theraply/src/components/RegisterBtn.css
@@ -1,9 +1,9 @@
 .regbtn {
-    position: absolute;
+    /* position: absolute;
     top: 8.3%;
     left: 75.5%;
     /* transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%); */
+    -ms-transform: translate(-50%, -50%); */ 
     height: 30px;
     width: 100px;
     padding: 5px 25px;
