--- a/theraply/src/App.css
+++ b/theraply/src/App.css
@@ -2,4 +2,40 @@
     margin: 0;
     padding: 0;
   }
+
+  .logo {
+    font-family: 'Lobster', cursive;
+    font-style: bold;
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 80px;
+    color: #0E0E73;
+  }
+
+  h1 {
+    font-family: 'Lobster', cursive;
+    font-style: bold;
+    font-weight: 400;
+    font-size: 64px;
+    line-height: 80px;
+    color: #0E0E73;
+    padding-top: 115px;
+    padding-left: 40px;
+    padding-right: 0px;
+    padding-bottom: 40px;
+
+  }
+
+  p {
+    font-family: 'Hind', sans-serif;
+    font-weight: 400;
+    color: #0E0E73;
+  }
+
+  .bodyText {
+    font-family: 'Hind', sans-serif;
+    font-weight: 400;
+    color: #0E0E73;
+  }
+  
   
