--- a/theraply/src/components/TestsList.css
+++ b/theraply/src/components/TestsList.css
@@ -4,8 +4,13 @@
 }
 
 .linkListContainer {
-    display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(300px, 1fr));
+    /* display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(300px, 1fr)); */
+    height: 750px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
     font-style: 'Hind', sans-serif;
     font-weight: 600;
     color: #0E0E73;
@@ -13,11 +18,17 @@
     padding: 50px 0px;
 }
 
+.imgi {
+   width: 400px;
+   height: 500px;
+}
+
 .linkList  {
     padding-top: 30px;
     padding-left: 0px;
     padding-right: 0px;
     padding-bottom: 35px;
+    width: 430px;
 }
 
 .outerLi{
