--- a/registration/App.css
+++ b/registration/App.css
@@ -3,7 +3,7 @@
     left: 350px;
     width: 855px;
     height: 655px;
-    position: absolute;
+    position: relative;
     box-sizing: border-box;
     object-fit: cover;
     border-color: rgba(208, 246, 246, 1);
@@ -11,6 +11,7 @@
     border-width: 1.2px;
     border-radius: 15px;
     background-color: rgba(255, 255, 255, 1);
+    filter: drop-shadow(0px 4px 60px #C2BCB7);
 }
 
 .container {
@@ -38,33 +39,41 @@
 }
 
 #firstname {
-    top: 200px;
-    left: 40px;
+    top: 23%;
+    bottom: 68%;
+    left: 11%;
+    right: 52%;
     width: 326px;
     height: 59px;
+
     position: absolute;
     box-sizing: border-box;
     object-fit: cover;
-    border-color: rgba(111, 205, 205, 1);
+
+    border-color: beige;
     border-style: solid;
     border-width: 1.2px;
     border-radius: 7px;
-    background-color: azure;
+    background-color: rgb(255, 249, 243, 0.95);
 }
 
 #lastname {
-    top: 200px;
-    left: 380px;
+    top: 23%;
+    bottom: 68%;
+    left: 51%;
+    right: 11%;
     width: 326px;
     height: 59px;
+
     position: absolute;
     box-sizing: border-box;
     object-fit: cover;
-    border-color: rgba(111, 205, 205, 1);
+
+    border-color: beige;
     border-style: solid;
     border-width: 1.2px;
     border-radius: 7px;
-    background-color: azure;
+    background-color: rgb(255, 249, 243, 0.95);
 }
 
 
@@ -73,68 +82,72 @@
     left: 87px;
     width: 156px;
     height: 51px;
+
     position: absolute;
     box-sizing: border-box;
     object-fit: cover;
+
     border-color: transparent;
-    border-radius: 8px;
-    background-color: teal;
-    color: azure;
+    border-radius: 25px 25px 25px 0px;
+
+    background-color: #FF7D34;
+    color: rgb(255, 249, 243, 0.95);
     display: flex;
-    align-items: flex-start;
+    align-items: center;
+    text-align: center;
+
     font-size: medium;
-    text-align: right;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 27px;
+    letter-spacing: -0.015em;
+
+    
 }
 
 /*
 .registertext {
-    top: 14px;
-    left: 100px;
-    color: azure;
-    height: auto;
-    position: center;
-    font-size: medium;
-    align-self: center;
-    font-style: normal;
-    text-align: center;
-    font-weight: 500px;
-    line-height: normal;
-    font-stretch: normal;
-    text-decoration: none;
+    
 }*/
 
 .telephone {
-    top: 270px;
-    left: 87px;
-    width: 670px;
+    top: 35%;
+    bottom: 56%;
+    right: 10%;
+    left: 10%;
+    width: 679px;
     height: 59px;
+
+    border-radius: 7px;
     display: flex;
     position: absolute;
     box-sizing: border-box;
     align-items: flex-start;
     flex-shrink: 1;
-    border-color: transparent;
+    border-color: rgb(255, 249, 243, 0.95);
 }
 
 #telephone {
     top: 0px;
-    left: -46px;
+    left: 1%;
     width: 670px;
     height: 59px;
     position: absolute;
     box-sizing: border-box;
     object-fit: cover;
-    border-color: rgba(111, 205, 205, 1);
+    border-color: beige;
     border-style: solid;
     border-width: 1.2px;
     border-radius: 7px;
-    background-color: azure;
+    background-color: rgb(255, 249, 243, 0.95);
 }
 
 .mail {
-    top: 340px;
-    left: 87px;
-    width: 670px;
+    top: 279px;
+    left: 2%;
+    width: 679px;
     height: 59px;
     display: flex;
     position: absolute;
@@ -145,23 +158,26 @@
 }
 
 #mail {
-    top: 0px;
-    left: -46px;
+    top: 47%;
+    bottom: 44%;
+    left: 11%;
+    right: 11%;
     width: 670px;
     height: 59px;
+
     position: absolute;
     box-sizing: border-box;
     object-fit: cover;
-    border-color: rgba(111, 205, 205, 1);
+    border-color: beige;
     border-style: solid;
     border-width: 1.2px;
     border-radius: 7px;
-    background-color: azure;
+    background-color: rgb(255, 249, 243, 0.95);
 }
 
 .password {
-    top: 410px;
-    left: 87px;
+    top: 385px;
+    left: 19px;
     width: 670px;
     height: 59px;
     display: flex;
@@ -174,22 +190,25 @@
 
 #password {
     top: 0px;
-    left: -46px;
+    left: 11%;
+    right: 11%;
     width: 670px;
     height: 59px;
+
     position: absolute;
     box-sizing: border-box;
     object-fit: cover;
-    border-color: rgba(111, 205, 205, 1);
+
+    border-color: beige;
     border-style: solid;
     border-width: 1.2px;
     border-radius: 7px;
-    background-color: azure;
+    background-color: rgb(255, 249, 243, 0.95);
 }
 
 .repeat {
-    top: 480px;
-    left: 87px;
+    top: 465px;
+    left: 19px;
     width: 670px;
     height: 59px;
     display: flex;
@@ -202,45 +221,71 @@
 
 #repeat {
     top: 0px;
-    left: -46px;
+    left: 11%;
+    right: 11%;
     width: 670px;
     height: 59px;
     position: absolute;
     box-sizing: border-box;
     object-fit: cover;
-    border-color: rgba(111, 205, 205, 1);
+    border-color: beige;
     border-style: solid;
     border-width: 1.2px;
     border-radius: 7px;
-    background-color: azure;
+    background-color: rgb(255, 249, 243, 0.95);
 }
 
 .registration {
-    top: 80px;
-    left: 150px;
+    top: 12%;
+    bottom: 82%;
+    left: 23%;
+    right: 61%;
     width: 158px;
     height: 56px;
+
     position: absolute;
     box-sizing: border-box;
+    box-shadow: 4px 4px 35px rgba(217, 217, 217, 0.6);
     object-fit: cover;
-    border-color: transparent;
-    border-radius: 20px 20px 0 0;
-    background-color: teal;
-    color: azure;
+
+    border-radius: 25px 25px 25px 0px;
+    border: 1px solid #FFF9F3;
+    background-color: #FFF9F3;
+    
+    color: #FF7D34;
     font-size: medium;
+    font-family: 'Hind';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 17px;
+    line-height: 36px;
+    letter-spacing: -0.015em;
+
+    
   }
 
   .login  {
-    top: 80px;
-    left: 40px;
+    top: 12%;
+    bottom: 82%;
+    left: 11%;
+    right: 77%;
     width: 114px;
     height: 56px;
+
     position: absolute;
     box-sizing: border-box;
     object-fit: cover;
     border-color: transparent;
-    border-radius: 0 20px;
-    background-color: rgb(162, 249, 249);
-    color: teal;
-    font-size: medium;
+    border-radius: 25px 25px 25px 0px;
+
+    box-shadow: 4px 4px 35px rgba(217, 217, 217, 0.6);
+    background-color: #FFF9F3;
+
+    color: rgba(14, 14, 115, 0.45);
+    font-size: 17px;
+    font-family: 'Hind';
+    font-style: normal;
+    font-weight: 600;
+    line-height: 36px;
+    letter-spacing: -0.015em;
   }
